<resources>
    <string name="app_name">Coffee App</string>
    <string name="greeting">Good morning</string>
    <string name="username_home">ANDERSON</string>
    <string name="loyalty_card">Loyalty card</string>
    <string name="button_home">Home</string>
    <string name="button_rewards">Rewards</string>
    <string name="button_order">My Order</string>
    <string name="choose_your_coffee">Choose your coffee</string>
    <string name="order_success">Order Success</string>
    <string name="order_success_text">Your order has been placed successfully.\nFor more details, go to my orders.</string>
    <string name="track_my_order">Track My Order</string>
    <string name="coffee_0">Americano</string>
    <string name="coffee_1">Cappuccino</string>
    <string name="coffee_2">Moca</string>
    <string name="coffee_3">Flat White</string>
    <string name="title_details">Details</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="total_amount">Total Amount</string>
    <string name="dollar_sign">$</string>
    <string name="profile">Profile</string>
    <string name="profile_fullname">Fullname</string>
    <string name="profile_phone">Phone number</string>
    <string name="profile_email">Email</string>
    <string name="profile_address">Address</string>
    <string name="rewards">Rewards</string>
    <string name="my_points">My Points:</string>
    <string name="default_points">0</string>
    <string name="redeem_drinks">Redeem drinks</string>
    <string name="history_rewards">History Rewards</string>
    <string name="my_cart">My Cart</string>
    <string name="total_price">Total Price</string>
    <string name="checkout">Checkout</string>
    <string name="my_order">My Order</string>
    <string name="tab_item_ongoing">On going</string>
    <string name="tab_item_history">History</string>
    <string name="title_redeem">Redeem</string>
    <string name="detail_shot">Shot</string>
    <string name="shot_single">Single</string>
    <string name="shot_double">Double</string>
    <string name="detail_select">Select</string>
    <string name="select_hot">Hot</string>
    <string name="select_cold">Cold</string>
    <string name="size_small">Small</string>
    <string name="size_normal">Normal</string>
    <string name="size_large">Large</string>
    <string name="ice_more">More</string>
    <string name="ice_normal">Normal</string>
    <string name="ice_less">Less</string>
    <string name="detail_size">Size</string>
    <string name="detail_ice">Ice</string>
</resources>