<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_my_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_order"
        android:textAppearance="@style/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tab_layout_my_order"
        android:layout_below="@id/title_my_order"
        app:tabSelectedTextColor="#001833"
        app:tabTextColor="#D8D8D8"
        app:tabIndicatorColor="#001833"
        android:background="@color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_ongoing" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_history" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@id/tab_layout_my_order"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="99dp"
        android:paddingHorizontal="31dp"
        android:id="@+id/view_pager_my_order"/>

</RelativeLayout>