<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toTopOf="@+id/my_cart"
        android:layout_marginBottom="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"/>

    <TextView
        android:id="@+id/my_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="92dp"
        android:layout_marginStart="33dp"
        android:text="@string/my_cart"
        android:textAppearance="@style/my_cart"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/my_cart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="25dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="27dp">

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/total_price"
            android:textAppearance="@style/item_cart_quantity"/>

        <TextView
            android:id="@+id/total_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/total_price"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/total_price_value"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="14dp"
            android:paddingHorizontal="29dp"
            android:drawableStart="@drawable/ic_shopping_cart"
            android:drawablePadding="12dp"
            android:text="@string/checkout"
            android:textAppearance="@style/checkout"
            android:background="@drawable/box_rectangle_7"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>